$Id: ChangeLog,v 1.88 2004/10/06 19:28:23 h_oudejans Exp $

2004-10-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed printerlogger pluggable
	* removed tear-off option from menu's
	* Disabled labels of disabled controls
	* Fixed a problem in the startup script
	* Added Save settings at exit (menu check)

2004-10-06 Herman Oudejans <hn.oudeans@quicknet.nl>
	* Added support for the 'firmwareswitch' setting.

2004-10-04 Herman Oudejans
	* Browse file buttons are now picture buttons
	* Catapult now sends an 'unplug' before sending 'plug'
	* Minor clean ups.

2004-10-03 Herman Oudejans <hn.oudeans@quicknet.nl>
	* Joystick settings are now saved.
	* Provided user feedback for screenshot without parameters
	* Added printerport functionality	

2004-10-02 Herman Oudejans <hn.oudeans@quicknet.nl>
	* Added Screenshot support
	* 'Grab' and 'Type' buttons are now disabled until openMSX runs
	* fixed initial state of the mute button

2004-10-02 Manuel Bilderbeek <manuel@msxnet.org>
	* Changed the order of video controls
	* Fixed capitalisation issues

2004-10-01 Herman Oudejans <hn.oudeans@quicknet.nl>
	* Added 'type' command support.

2004-09-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Converter underscores to spaces in machines and extensions
	* Fixed: If machines and/or extensions were saved the last time
		    and catapult is started and stopped immidiately,
		    the selected stuff was lost.
	* Machine and extension names can now contain spaces.
	* Added 'touch' in the windows build steps to avoid having to copy
	   the bitmaps over and over again.
	* Cleaned up the output of the windows build process.

2004-09-24 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed some sizers in the video and misc pages
	* Added rensha turbo support
	* Added Load/Save/Save As OpenMSX settings.

2004-09-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Changed the Misc Controls page layout
	* Several cosmetic fixes
	* Removed the Throttle button. Same functionality is now in the